# kanban-rust-htmx

./: .env  .gitignore  Cargo.toml  README.md  kanban.db  learnings.md  package-lock.json  package.json  progress.txt  tailwind.config.js
.sqlx/: query-1d63984cd32120bfcc931f5e50e4c695bf785efb4e1504973b657e872744a5da.json  query-2327840244ccad4d123043fe250afe949cbbe8f3f3295ad51c1474f8c619eebb.json  query-5f980dd9cffa249f537affd340d9c7d6d55b3d1bde7a402d3b0ea09d6e7a9a86.json  query-5ff901e58f8d9f848e3b75b017fbe32e66c744a1440092044e620c1f9557b38e.json  query-60800e34e68c079cef6bb536cc349d5dafd2ce8d643aa051d6307a7e7dea15a8.json  query-6be43180e901c1f9cd5cb75ebc633b1adda0eb695ec5a0f71de4a774f10a10d0.json  query-ac84b2d13a34cc53bf8f6c19052460589f52917da92fa285bbd579ce4852d54e.json  query-b14899567ec8d689db12caa994775fb7af163169828e5633df060a54a60e6c1b.json  query-b8838cc9815fc317613a19d23a35ae0f3fb76547d478b5d0b51230f2dcc03f53.json  query-cc3ef4b028bde0be0170d144ebfd9e6751614c50c4d455152ff94669e2d63ebb.json  query-d2f754eab67f80eae5e9a646d1eb01e67126c5233f0e0649b7d5f03d29e15484.json  query-d38d0cc725eb6712101f8ef602ce130f91d4ce2d899668b9a66ae55344ae4e10.json  query-f8f98541996b6aaa5dd148339097869fdfa4d673d91fe56f9ae4c91b1fe96a51.json  query-fd08b152904af0cada2f3c2b61e11462e168d7efd64cdcb9b41861c9689efc65.json
assets/: output.css
migrations/: 20260201000000_create_event_log.sql  20260201000001_create_kanban_schema.sql  20260203000000_create_sprite_registry.sql  20260213194758_create_event_log.sql
public/: index.html  output.css
souls/: README.md  killer.md  (+2 more)
src/: main.rs  (+4 more)
(+6 files in other folders)
