[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
